# stock_assistant

./: .gitignore  Chat_記憶系統_Roadmap_v1-v3.md  FRONTEND_BUG_REPORT.md  FRONTEND_RELEASE_CHECKLIST.md  README.md  前端資安檢查.md  資安檢查結果.md
.github/workflows/: ci.yml  deploy-backend.yml  docker-publish.yml
.run/: AI-Worker.run.xml  Backend-AppBootstrap.run.xml
apps/ai-worker/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/ai-worker/app/: __init__.py  config.py  main.py  metrics.py  rag_schema_guard.py
apps/ai-worker/app/api/: health.py  ingest.py  metrics.py  ocr.py  query.py
apps/ai-worker/app/db/: rag_repository.py
apps/ai-worker/app/models/: schemas.py
apps/ai-worker/app/services/: document_parser.py  embedding_service.py  llm_service.py  ocr_service.py  rag_service.py  tesseract_service.py  text_splitter.py
apps/ai-worker/tests/: test_config_dimension.py  test_health.py  test_main_startup.py  test_metrics.py  test_ocr_service.py  test_rag_dimension_guard.py  test_rag_query_contract.py  test_rag_schema_contract.py
apps/frontend/: .env.development  .env.example  .env.production  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/: 00_README.md  01_專案架構書.md  02_技術棧.md  03_使用者故事.md  04_API_合約.md  05_DB_資料庫設計.md  06_Auth_安全設計.md  07_OCR_匯入流程.md  08_AI_RAG_設計.md  09_Stocks_行情代理.md  10_部署與基礎設施.md  11_可觀測性與日誌.md  12_後端開發規範.md  13_後端程式碼審核.md  14_後端_Smoke_測試基線.md  15_面試用_股票專案技術重點.md  _unicode_test.txt  stock_project_v1_1_ddl.sql
docs/adr/: 0001_auth_cookie_jwt_refresh_rotation.md  0004_rag_schema_ownership.md  (+2 more)
(+587 files in other folders)
